# devsecops-template-api-rust

./: Cargo.toml
src/: main.rs
