[package]
name = "bootstrap-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
azure_core = "0.8.0"
azure_identity = "0.9.0"
chrono = "0.4.23"
env_logger = "0.10.0"
log = "0.4.17"
openidconnect = "2.5.0"
reqwest = "0.11.14"
serde = "1.0.152"
serde_json = "1.0.91"
tokio = "1.24.2"
url = "2.3.1"


